--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,60 +1,27 @@
+# See https://pre-commit.com for more information
+# See https://pre-commit.com/hooks.html for more hooks
+default_language_version:
+  python: python3.13
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: 'v4.4.0'
+  rev: v5.0.0
   hooks:
-  - id: check-merge-conflict
-    exclude: "rst$"
-- repo: https://github.com/asottile/yesqa
-  rev: v1.4.0
-  hooks:
-  - id: yesqa
-- repo: https://github.com/Zac-HD/shed
-  rev: 2023.5.1
-  hooks:
-  - id: shed
-    args:
-    - --refactor
-    types_or:
-    - python
-    - markdown
-    - rst
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: 'v4.4.0'
-  hooks:
-  - id: check-case-conflict
-  - id: check-json
-  - id: check-xml
-  - id: debug-statements
   - id: check-added-large-files
+  - id: check-merge-conflict
+  - id: check-toml
+  - id: check-yaml
   - id: end-of-file-fixer
-  - id: requirements-txt-fixer
   - id: trailing-whitespace
-  - id: check-symlinks
-  - id: debug-statements
-# Another entry is required to apply file-contents-sorter to another file
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: 'v4.4.0'
+# since autofix is enabled, ruff should go before black
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.9.5
   hooks:
-  - id: file-contents-sorter
-    files: |
-      docs/spelling_wordlist.txt|
-      .gitignore
-- repo: https://github.com/rhysd/actionlint
-  rev: v1.6.24
+  - id: ruff-format
+  - id: ruff
+    args: [--fix, --exit-non-zero-on-fix]
+- repo: https://github.com/mrtazz/checkmake.git
+  # Or another commit hash or version
+  rev: 0.2.2
   hooks:
-  - id: actionlint-docker
-    args:
-    - -ignore
-    - 'SC2155:'
-    - -ignore
-    - 'SC2086:'
-    - -ignore
-    - 'SC1004:'
-- repo: https://github.com/sirosen/check-jsonschema
-  rev: 0.23.0
-  hooks:
-  - id: check-github-actions
-ci:
-  skip:
-  - actionlint-docker
-  - check-github-actions
+  # Use this hook to let pre-commit build checkmake in its sandbox
+  - id: checkmake
