--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
       (github.event_name == 'pull_request_target' && github.actor == 'dependabot[bot]')
     strategy:
       matrix:
-        py_version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
+        py_version: ['3.9', '3.10', '3.11', '3.12', '3.13']
     steps:
     - name: Checkout commit
       uses: actions/checkout@v4
@@ -41,7 +41,7 @@ jobs:
     - name: Lint
       run: |
         echo "::add-matcher::.github/actionlint-matcher.json"
-        make lint
+        poetry run mypy apolo_kube_client tests
       env:
         CI_LINT_RUN: 1
     - name: Run tests
