--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
     name: Release client
     runs-on: ubuntu-latest
     needs: test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/'))
     steps:
     - name: Checkout commit
       uses: actions/checkout@v4
@@ -64,9 +64,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: 3.9
-    - name: Install dependencies
+    - name: Install poetry
       run: |
         python -m pip install "poetry==2.0.1"
+    - name: Install dependencies
+      run: |
+        make build
     - name: PyPI upload
       env:
         PYPI_USERNAME: __token__
