--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,12 +2,12 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [init]
     tags: [v*]
   pull_request:
-    branches: [main]
+    branches: [init]
   pull_request_target:
-    branches: [main]
+    branches: [init]
   schedule:
   - cron: 0 4 * * *
 jobs:
