--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,52 +11,52 @@ on:
   schedule:
   - cron: 0 4 * * *
 jobs:
-  test:
-    name: Run tests
-    runs-on: ubuntu-latest
-    if: |
-      (github.event_name != 'pull_request_target' && github.actor != 'dependabot[bot]') ||
-      (github.event_name == 'pull_request_target' && github.actor == 'dependabot[bot]')
-    strategy:
-      matrix:
-        py_version: ['3.9', '3.10', '3.11', '3.12', '3.13']
-    steps:
-    - name: Checkout commit
-      uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.pull_request.head.sha }}
-    - name: Install python
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.py_version }}
-    - name: Cache packages
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-py-${{ matrix.py_version }}-${{ hashFiles('pyproject.toml') }}
-    - name: Install poetry
-      run: pip install poetry==2.0.1
-    - name: Install dependencies
-      run: make setup
-    - name: Lint
-      run: |
-        echo "::add-matcher::.github/actionlint-matcher.json"
-        poetry run mypy apolo_kube_client tests
-      env:
-        CI_LINT_RUN: 1
-    - name: Run tests
-      run: make test
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v5
-      with:
-        file: .coverage.xml
-        flags: py${{ matrix.py_version }}
-        name: codecov
+#  test:
+#    name: Run tests
+#    runs-on: ubuntu-latest
+#    if: |
+#      (github.event_name != 'pull_request_target' && github.actor != 'dependabot[bot]') ||
+#      (github.event_name == 'pull_request_target' && github.actor == 'dependabot[bot]')
+#    strategy:
+#      matrix:
+#        py_version: ['3.9', '3.10', '3.11', '3.12', '3.13']
+#    steps:
+#    - name: Checkout commit
+#      uses: actions/checkout@v4
+#      with:
+#        ref: ${{ github.event.pull_request.head.sha }}
+#    - name: Install python
+#      uses: actions/setup-python@v5
+#      with:
+#        python-version: ${{ matrix.py_version }}
+#    - name: Cache packages
+#      uses: actions/cache@v4
+#      with:
+#        path: ~/.cache/pip
+#        key: ${{ runner.os }}-py-${{ matrix.py_version }}-${{ hashFiles('pyproject.toml') }}
+#    - name: Install poetry
+#      run: pip install poetry==2.0.1
+#    - name: Install dependencies
+#      run: make setup
+#    - name: Lint
+#      run: |
+#        echo "::add-matcher::.github/actionlint-matcher.json"
+#        poetry run mypy apolo_kube_client tests
+#      env:
+#        CI_LINT_RUN: 1
+#    - name: Run tests
+#      run: make test
+#    - name: Upload coverage to Codecov
+#      uses: codecov/codecov-action@v5
+#      with:
+#        file: .coverage.xml
+#        flags: py${{ matrix.py_version }}
+#        name: codecov
   deploy:
     name: Release client
     runs-on: ubuntu-latest
     needs: test
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/'))
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/init' || startsWith(github.ref, 'refs/tags/'))
     steps:
     - name: Checkout commit
       uses: actions/checkout@v4
