--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,7 +55,7 @@ jobs:
   deploy:
     name: Release client
     runs-on: ubuntu-latest
-    needs: test
+#    needs: test
     if: github.event_name == 'push' && (github.ref == 'refs/heads/init' || startsWith(github.ref, 'refs/tags/'))
     steps:
     - name: Checkout commit
