--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,25 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: 'v4.4.0'
+  rev: v5.0.0
   hooks:
+  - id: check-added-large-files
   - id: check-merge-conflict
-    exclude: "rst$"
+  - id: check-toml
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+  - id: check-case-conflict
+  - id: check-json
+  - id: check-xml
+  - id: debug-statements
+  - id: check-symlinks
+  - id: debug-statements
+
 - repo: https://github.com/asottile/yesqa
   rev: v1.4.0
   hooks:
   - id: yesqa
-# - repo: https://github.com/sondrelg/pep585-upgrade
-#   rev: v1.0.1
-#   hooks:
-#   - id: upgrade-type-hints
-#     args:
-#     - --futures=true
+
 - repo: https://github.com/Zac-HD/shed
   rev: 2023.5.1
   hooks:
@@ -24,27 +30,14 @@ repos:
     - python
     - markdown
     - rst
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: 'v4.4.0'
+
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.9.5
   hooks:
-  - id: check-case-conflict
-  - id: check-json
-  - id: check-xml
-  - id: debug-statements
-  - id: check-added-large-files
-  - id: end-of-file-fixer
-  - id: requirements-txt-fixer
-  - id: trailing-whitespace
-  - id: check-symlinks
-  - id: debug-statements
-# Another entry is required to apply file-contents-sorter to another file
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: 'v4.4.0'
-  hooks:
-  - id: file-contents-sorter
-    files: |
-      docs/spelling_wordlist.txt|
-      .gitignore
+  - id: ruff-format
+  - id: ruff
+    args: [--fix, --exit-non-zero-on-fix]
+
 - repo: https://github.com/rhysd/actionlint
   rev: v1.6.24
   hooks:
@@ -60,6 +53,12 @@ repos:
   rev: 0.23.0
   hooks:
   - id: check-github-actions
+- repo: https://github.com/python-poetry/poetry
+  rev: '2.0.1'
+  hooks:
+  - id: poetry-check
+  - id: poetry-lock
+  - id: poetry-install
 ci:
   skip:
   - actionlint-docker
