--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,10 +65,14 @@ jobs:
     - name: Install dependencies
       run: |
         make venv
-    - name: PyPI upload
-      env:
-        PYPI_USERNAME: __token__
-        PYPI_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+    - name: Build package
       run: |
-        poetry config http-basic.pypi ${{ env.PYPI_USERNAME }} ${{ env.PYPI_PASSWORD }}
-        make publish
+        poetry build
+    - name: Publish to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
+    - name: Sign the dists with Sigstore
+      uses: sigstore/gh-action-sigstore-python@v3.0.0
+      with:
+        inputs: >-
+          ./dist/*.tar.gz
+          ./dist/*.whl
