add a namespace api. onboard minikube for future integration tests

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,8 +39,16 @@ jobs:
       run: |
         echo "::add-matcher::.github/actionlint-matcher.json"
         make lint
-    - name: Run tests
-      run: make test
+    - name: Run unit tests
+      run: make test_unit
+    - name: Start minikube
+      run: |
+        make install_k8s
+        make start_k8s
+    - name: Setup services in minikube
+      run: make apply_configuration_k8s
+    - name: Run integration tests
+      run: make test_integration
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
       with:
