--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,8 +9,8 @@ on:
   schedule:
   - cron: 0 4 * * *
 jobs:
-  test:
-    name: Run tests
+  unit_tests:
+    name: Run unit tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -39,18 +39,47 @@ jobs:
       run: |
         echo "::add-matcher::.github/actionlint-matcher.json"
         make lint
-    - name: Run tests
-      run: make test
+    - name: Run unit tests
+      run: make test_unit
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
       with:
         files: .coverage.xml
         flags: py${{ matrix.py_version }}
         name: codecov
+  integration_tests:
+    name: Run integration tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout commit
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: Install python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Cache packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-py-3.12-${{ hashFiles('pyproject.toml') }}
+      - name: Install poetry
+        run: pip install poetry==2.0.1
+      - name: Install dependencies
+        run: make setup
+      - name: Start minikube
+        run: |
+          make install_k8s
+          make start_k8s
+      - name: Setup services in minikube
+        run: make apply_configuration_k8s
+      - name: Run integration tests
+        run: make test_integration
   deploy:
     name: Release client
     runs-on: ubuntu-latest
-    needs: test
+    needs: [unit_tests, integration_tests]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: write  # IMPORTANT: mandatory for making GitHub Releases
