--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "aiohttp (>=3.8.1)",
     "yarl (>=1.10)",
     "multidict (>=6)",
+    "pydantic (>=2.11.5,<3.0.0)",
+    "kubernetes (>=32.0.1,<33.0.0)",
 ]
 dynamic = ["version"]
 
@@ -76,3 +78,11 @@ no_implicit_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 warn_return_any = true
+
+[[tool.mypy.overrides]]
+module = "api_groups.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "kubernetes.*"
+ignore_missing_imports = true
