--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,23 +20,23 @@ repos:
   hooks:
   - id: yesqa
 
-#- repo: https://github.com/Zac-HD/shed
-#  rev: 2024.10.1
-#  hooks:
-#  - id: shed
-#    args:
-#    - --refactor
-#    types_or:
-#    - python
-#    - markdown
-#    - rst
-#
-#- repo: https://github.com/astral-sh/ruff-pre-commit
-#  rev: v0.9.6
-#  hooks:
-#  - id: ruff-format
-#  - id: ruff
-#    args: [--fix, --exit-non-zero-on-fix]
+- repo: https://github.com/Zac-HD/shed
+  rev: 2024.10.1
+  hooks:
+  - id: shed
+    args:
+    - --refactor
+    types_or:
+    - python
+    - markdown
+    - rst
+
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.9.6
+  hooks:
+  - id: ruff-format
+  - id: ruff
+    args: [--fix, --exit-non-zero-on-fix]
 
 - repo: https://github.com/rhysd/actionlint
   rev: v1.7.7
