--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        py_version: ['3.9', '3.10', '3.11', '3.12', '3.13']
+        py_version: ['3.13']
     steps:
     - name: Checkout commit
       uses: actions/checkout@v4
