--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "multidict (>=6)",
     "pydantic (>=2.11.5,<3.0.0)",
     "kubernetes (>=32.0.1,<33.0.0)",
+    "cryptography (>=45.0.4,<46.0.0)",
 ]
 dynamic = ["version"]
 
