--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ dependencies = [
     "multidict (>=6)",
     "pydantic (>=2.11.5,<3.0.0)",
     "kubernetes (>=32.0.1,<33.0.0)",
-    "cryptography (>=45.0.4,<46.0.0)",
 ]
 dynamic = ["version"]
 
@@ -42,6 +41,7 @@ pre-commit = "^4.1.0"
 pytest = "^8.3.4"
 pytest-asyncio = "^0.25.3"
 pytest-cov = "^6.0.0"
+cryptography = "^45.0.4"
 
 [tool.black]
 exclude = '''
