--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        py_version: ['3.9', '3.10', '3.11', '3.12', '3.13']
+        py_version: ['3.12', '3.13']
     steps:
     - name: Checkout commit
       uses: actions/checkout@v4
@@ -58,12 +58,12 @@ jobs:
       - name: Install python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: "3.13"
       - name: Cache packages
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-py-3.12-${{ hashFiles('pyproject.toml') }}
+          key: ${{ runner.os }}-py-3.13-${{ hashFiles('pyproject.toml') }}
       - name: Install poetry
         run: pip install poetry==2.0.1
       - name: Install dependencies
@@ -90,7 +90,7 @@ jobs:
     - name: Install python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.9
+        python-version: 3.13
     - name: Install poetry
       run: |
         python -m pip install "poetry==2.0.1"
