--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,13 @@ authors = [
 ]
 license = {text = "proprietary"}
 readme = "README.md"
-requires-python = ">=3.9,<4.0"
+requires-python = ">=3.12,<4.0"
 dependencies = [
-    "aiohttp (>=3.8.1)",
-    "yarl (>=1.10)",
+    "aiohttp (>=3.12.9)",
+    "yarl (>=1.20)",
     "multidict (>=6)",
+    "pydantic (>=2.11.5,<3.0.0)",
+    "kubernetes (>=32.0.1,<33.0.0)",
 ]
 dynamic = ["version"]
 
@@ -39,6 +41,7 @@ pre-commit = "^4.1.0"
 pytest = "^8.3.4"
 pytest-asyncio = "^0.25.3"
 pytest-cov = "^6.0.0"
+cryptography = "^45.0.4"
 
 [tool.black]
 exclude = '''
@@ -76,3 +79,11 @@ no_implicit_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 warn_return_any = true
+
+[[tool.mypy.overrides]]
+module = "kubernetes.client.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "cryptography.*"
+ignore_missing_imports = true
