--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -76,10 +76,20 @@ jobs:
         run: make apply_configuration_k8s
       - name: Run integration tests
         run: make test_integration
+
+  check: # This job does nothing and is only used for the branch protection
+    name: Check
+    needs: [unit_tests, integration_tests]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check
+        run: |
+          echo "All checks have passed"
+
   deploy:
     name: Release client
     runs-on: ubuntu-latest
-    needs: [unit_tests, integration_tests]
+    needs: check
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: write  # IMPORTANT: mandatory for making GitHub Releases
