--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,7 @@ warn_unused_ignores = true
 warn_return_any = true
 
 [[tool.mypy.overrides]]
-module = "kubernetes.client.*"
+module = "kubernetes.*"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
