--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "multidict (>=6)",
     "pydantic (>=2.11.5,<3.0.0)",
     "kubernetes (>=32.0.1,<33.0.0)",
+    "cachetools (>=5.3.3)",
 ]
 dynamic = ["version"]
 
@@ -42,6 +43,8 @@ pytest = "^8.3.4"
 pytest-asyncio = "^0.25.3"
 pytest-cov = "^6.0.0"
 cryptography = "^45.0.4"
+types-pyyaml = "^6.0.12.20250915"
+types-cachetools = "^6.2.0.20250827"
 
 [tool.black]
 exclude = '''
