--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,18 +64,8 @@ addopts = """
 """
 
 [tool.mypy]
-follow_imports = "silent"
-strict_equality = true
-# --strict option
-warn_unused_configs = true
-disallow_subclassing_any = true
-disallow_any_generics = true
-disallow_untyped_calls = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
+strict = true
+pretty = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 warn_return_any = true
