--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
   rev: v6.0.0
   hooks:
   - id: check-added-large-files
+    exclude: "^scripts/swagger.json$"
   - id: check-merge-conflict
   - id: check-toml
   - id: check-yaml
