Add missing dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "multidict (>=6)",
     "pydantic (>=2.12.3,<3.0.0)",
     "cachetools (>=5.3.3)",
+    "pyyaml (>=6.0.3,<7.0.0)",
 ]
 dynamic = ["version"]
 
